# model_platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HOWTO.md  Makefile  README.md  handson.md  main_kube.py  main_working_kube.py  pyproject.toml
.github/workflows/: build.yml  test.yml
.streamlit/: config.toml
backend/: Dockerfile  __init__.py  __main__.py  dot_env.py  utils.py
backend/api/: agent_infos_routes.py  agents_routes.py  app.py  auth_routes.py  batch_routes.py  compliance_report_routes.py  demo_routes.py  deployed_agents_routes.py  deployed_models_routes.py  health_check.py  hugging_face_routes.py  llm_routes.py  metrics_routes.py  model_infos_routes.py  models_routes.py  projects_routes.py  users_routes.py
backend/infrastructure/: agent_info_pgsql_db_handler.py  agent_info_sqlite_db_handler.py  config_os_adapter.py  grafana_dashboard_adapter.py  k8s_agent_deployment_adapter.py  k8s_batch_prediction_adapter.py  k8s_deployment.py  k8s_deployment_cluster_adapter.py  k8s_model_deployment_adapter.py  k8s_registry_deployment_adapter.py  log_events_handler_json_adapter.py  minio_storage_adapter.py  mlflow_agent_registry_adapter.py  mlflow_client.py  mlflow_handler_adapter.py  mlflow_model_registry_adapter.py  model_info_pgsql_db_handler.py  model_info_sqlite_db_handler.py  platform_config_pgsql_adapter.py  project_pgsql_db_handler.py  project_sqlite_db_handler.py  prometheus_adapter.py  user_psql_db_adapter.py  user_sqlite_db_adapter.py
cli/: endpoints.py  main.py
cli/commands/: agent.py  auth.py  batch.py  demo.py  models.py  projects.py  users.py
cli/utils/: api_calls.py  output.py  token.py
demos/: Makefile  batch_prediction_test_credit_default.csv  run_notebooks.sh
demos/monitoring_demo/: invoke_credit_scoring.py
demos/queries/: access_control_queries.http  models_routes_queries.http  projects_routes_queries.http
demos/streamlit_forecasting_demo/: README.md  forecasting_demo.ipynb  forecasting_demo_app.py
dev_utils/: populate_sqlitedb.py
docs/: ai_act_model_card_template.md  architecture.md  brainstorm_archi.md  first_readme.md  first_us.txt  monitoring.excalidraw  pattern_model_platform.md  rex_mlflow.md
docs/ADRs/: ADR_model_registry.md  event_storming.md
front/: app.py  dot_env.py  project_page.py  utils.py
frontend/: Dockerfile  MONITORING_GUIDE.md  app.py  config.toml  dot_env.py  index.html  project_page.py  utils.py
infrastructure/: docker-compose.yml
model_platform/: __init__.py  __main__.py  config.py  utils.py
queries/: access_control_queries.http  deployed_model_query.http  governance.http  model_platform_queries.http  models_routes_queries.http  projects_routes_queries.http
tests/: __init__.py  conftest.py  test_agent_skills.py  test_monitoring_endpoints.py
tests_end_to_end/: test_from_project_creation_to_model_predict.py
(+357 files in other folders)
